# bazel8-workspace-rje610-rulesjava

./: .bazelrc  README.md  WORKSPACE  maven_install.json
cpp_app/: BUILD.bazel  hello.cc
java_app/: BUILD.bazel
java_app/src/main/java/com/example/: App.java
java_app/src/test/java/com/example/: AppTest.java
